fixed dlc form to look better on mobile

--- a/src/styles/DlcForm.css
+++ b/src/styles/DlcForm.css
@@ -14,11 +14,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);  
+    box-shadow: 2px 2px;
 }
 
 .dlcList {
     display: grid;
-    grid-template-columns: 350px 50px 350px 50px;
+    grid-template-columns: 350px 30px 350px 30px;
     grid-row: auto auto;
     gap: 30px;
 }
@@ -37,8 +38,31 @@ label {
 @media (max-width: 900px) {
     .dlcList {
         display: grid;
-        grid-template-columns: 150px 50px 150px 50px;
+        grid-template-columns: 200px 50px;
         grid-row: auto auto;
         gap: 25px;
-    }    
+        height: 300px;
+        overflow-y: auto;
+        grid-template-rows: repeat(3, 45px)
+    }
+    
+    /* width */
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1; 
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: #888; 
+    }
+    
+    /* Handle on hover */
+    ::-webkit-scrollbar-thumb:hover {
+        background: #555; 
+    }
 }
